<resources>
    <string name="google_api_key">AIzaSyBVs_89bipnMCNFf7u0vSPNsPzY7Tww38k</string>
    <string name="google_maps_gecoding_api_key">AIzaSyCbnmr91ZShTHO_TJRMSDzKxaml4215334</string>
    <string name="backend_url">http://115.99.196.11:</string>
    <string name="app_name">HAPIS Doctor</string>
    <string name="source_type">android</string>
    <string name="copyright">Copyright &#169; 2018, HAPIS</string>
    <string name="action_settings">Settings</string>
    <string name="exit_toast_txt">Press again to exit HAPIS App</string>
    <string name="terms_of_use">\u0020<u>Terms of Service</u></string>
    <string name="i_accept">By clicking \"Get Started\" You agree to HAPIS </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_actionbar">Home</string>
    <string name="profile_management">Profile Management</string>
    <string name="submit_button_label">Submit</string>
    <string name="password_hint">Password</string>
    <string name="set_password_hint">Set Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="no_network_title">No network available.</string>
    <string name="no_network_message">Network Alert! You are in a  Zero network zone, please connect to a network and try again.</string>
    <string name="please_enter_email_id">Please enter email</string>
    <string name="please_enter_password">Seems you forgot to enter the Password</string>
    <string name="please_enter_valid_email_id">Email entered is an incorrect format</string>
    <string name="fetching_user_profile_data">Fetching user profile data.</string>
    <string name="add_product">Add Product</string>
    <string name="under_warranty">Under Warranty?</string>
    <string name="product_image_lbl">Product Image</string>
    <string name="product_image">Product\nImage</string>
    <string name="product_model_no_hint_mandatory">Model Number  <font fgcolor="#fd3e39">●</font></string>
    <string name="product_model_no_floating_hint">Model Number</string>
    <string name="product_model_no_hint">Model No.</string>
    <string name="product_serial_no_imei_no_hint">Serial/IMEI No.</string>
    <string name="product_vin_hint">VIN No.</string>
    <string name="product_serial_no_hint">Serial No.</string>
    <string name="product_serial_no_hint_mandatory">Serial No. *</string>
    <string name="product_engine_no_hint">Engine No.</string>
    <string name="product_regd_no_hint">Registration No.</string>
    <string name="first_regd_on">First Registered On</string>
    <string name="warrenty_exp_date_hint">Warranty Expiry Date</string>
    <string name="purchase_date_hint">Purchase Date</string>
    <string name="purchase_date_hint_mandatory">Purchase Date <font fgcolor="#fd3e39">●</font></string>
    <string name="purchase_date_floating_hint">Purchase Date</string>
    <string name="select_category">Select Category* (Ex: TV, Laptop, etc..)</string>
    <string name="select_subcategory">Select Category <font fgcolor="#fd3e39">●</font></string>
    <string name="till_date_mandatory_hint">Till Date <font fgcolor="#fd3e39">●</font></string>
    <string name="till_date_floating_hint">Till Date</string>
    <string name="subcategory_floating_hint">Category</string>
    <string name="please_select_category">Please select category.</string>
    <string name="please_select_subcategory">Please select product category.</string>
    <string name="please_enter_product_model_no">Please enter or scan product model number.</string>
    <string name="please_enter_or_scan_product_serial_no">Please enter or scan product serial number.</string>
    <string name="select_brand">Select Brand  <font fgcolor="#fd3e39">●</font></string>
    <string name="brand_floating_hint">Brand</string>
    <string name="please_select_brand">Please select brand.</string>
    <string name="please_select_purchase_date">Please select purchase date.</string>
    <string name="captured_Photo">Captured Photo</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_success">Your OTP is on it\'s way</string>
    <string name="forgot_password_lbl">Forgot Password</string>
    <string name="enter_current_password"> Current Password</string>
    <string name="please_enter_otp">You need to enter a valid OTP to proceed.</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_old_password">Please enter old password.</string>
    <string name="old_password_and_new_password_should_not_be_same">For security reasons new and old passwords should not be same</string>
    <string name="registration_screen_title">Registration</string>
    <string name="validate_otp_screen_title">Validate OTP</string>
    <string name="dashboard">Dashboard</string>
    <string name="grid_view_title">My Products</string>
    <string name="registering">Registering...</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="updating_profile">Updating profile</string>
    <string name="change_password_lbl">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="user_login_in_process">User Login in process...</string>
    <string name="ok">OK</string>
    <string name="set_alarm">Set alarm</string>
    <string name="delete">Delete</string>
    <string name="not_available">Not Available</string>
    <string name="product_details">Product Details</string>
    <string name="fetching_product_category_types_details_progress_msg">Fetching Product Category Types details in progress...</string>
    <string name="failed_to_fetch_details">Failed to fetch details</string>
    <string name="digitalkitdetails">Digital Kit</string>
    <string name="add_product_request_in_progress">Add product request in progress...</string>
    <string name="add_product_sucessfull">Your digital kit has been generated.</string>
    <string name="add_product_failed">Add product failed</string>
    <string name="failed_to_fetch_or_update_details">Something seems to have gone wrong. We appreciate your patience while we put it back together.</string>
    <string name="product_description">Product Description / Comments</string>
    <string name="service_locator">Service Locations</string>
    <string name="navigation_drawe_list_item">Navigation Drawer List Item</string>
    <string name="logout">Logout</string>
    <string name="user_logout_message">See you soon</string>
    <string name="mobile_number_should_not_more_than_10">We can not take mobile number more than 12-digits</string>
    <string name="incoomplete_otp">Alert! OTP  field should have 6 digits</string>
    <string name="password_should_be_of_length">Password field should have minimum 6 digits.</string>
    <string name="refer_friend">Refer Friend</string>
    <string name="fetching_digital_kit_resources">Fetching Digital kit resources...</string>
    <string name="product_resource_not_available">Product resource not available</string>
    <string name="no_manual_available">Currently we do not have any manuals for you. We will notify you as soon as we add self help manuals.</string>
    <string name="no_video_available">Currently we do not have any videos for you. We will notify you as soon as we add self help videos.</string>
    <string name="loading_with_product_images_link">Fetching ...</string>
    <string name="loading_with_product_video_link">Loading with product video links</string>
    <string name="error_init_failure"><![CDATA[<string name=\"error_init_faiInitialization failure: Unable to play video.]]></string>
    <string name="password_not_match">Passwords doesn\'t match</string>
    <string name="invalid_mobile_number_starts_with_zero">Alert! Mobile number field should not start with zero</string>
    <string name="password_change_successful">You have a new password</string>
    <string name="unknown_errror">Unknown error.</string>
    <string name="invalid_old_password">You have entered an incorrect password</string>
    <string name="video_review_text">Was this useful?</string>
    <string name="select_camera">Select a Camera</string>
    <string name="unable_to_scan_product_serial_number">Unable to scan product serial number</string>
    <string name="fetching_service_locators">Fetching service locators...</string>
    <string name="view_product_details">View Product Details</string>
    <string name="fetching_product_details">Fetching product details..</string>
    <string name="product_details_not_available">Product details not available</string>
    <string name="product_sub_category">Product Subcategory</string>
    <string name="product_category">Product Category</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="seller">Seller</string>
    <string name="unable_to_process_request">Something seems to have gone wrong. We appreciate your patience while we put it back together.</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="please_enter_state">Please enter stateCode</string>
    <string name="no_notifications_to_show">You don\'t have any notifications</string>
    <string name="no_offers_to_show">You don\'t have any offers :( But do keep checking. Something nice may pop up:)</string>
    <string name="notification">Notification</string>
    <string name="offer">Offer</string>
    <string name="msg_center">Message Center</string>
    <string name="fetching_notifications">Fetching notifications..</string>
    <string name="fetching_services">Fetching Services...</string>
    <string name="please_enter_country">Please enter country</string>
    <string name="pay_now">Pay Now</string>
    <string name="please_wait">Please wait…</string>
    <string name="payment_success_thanks">Your payment has been successfully processed. Thank you for using PayUMoney!</string>
    <string name="search">Search</string>
    <string name="application_key">easoftech28b7a8dd04cae7d9934014d5773395886</string>
    <string name="default_media_location_folder">@string/app_name</string>
    <string name="login_label">Login</string>
    <string name="sliding_text_1">Knowledge Base and Self Service</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="select_time_label">Select Time</string>
    <string name="sign_in">Sign In</string>
    <string name="nav_title_inbox">Inbox</string>
    <string name="nav_title_more">More</string>
    <string name="select_label">Select</string>
    <string name="pin_code_mandatory">PIN Code <font fgcolor="#fd3e39">●</font></string>
    <string name="pin_code">PIN Code</string>
    <string name="city_mandatory_hint">City <font fgcolor="#fd3e39">●</font></string>
    <string name="city_hint">City</string>
    <string name="state_mandatory_hint">State <font fgcolor="#fd3e39">●</font></string>
    <string name="state_hint">State</string>
    <string name="country_mandatory_hint">Country <font fgcolor="#fd3e39">●</font></string>
    <string name="country_hint">Country</string>
    <string name="address_mandatory_hint">Address <font fgcolor="#fd3e39">●</font></string>
    <string name="address_hint">Address</string>
    <string name="account">Account</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="add_new_address">Add New Address</string>
    <string name="landmark">Landmark</string>
    <string name="nav_title_upcoming">Appointments</string>
    <string name="nav_title_history">History</string>
    <string name="time_slot_not_available_msg">Time slot not available</string>
    <string name="stay_connected">Stay Connected...!!</string>
</resources>