<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_upcoming"
        android:enabled="true"
        android:icon="@drawable/ic_events"
        android:title="@string/nav_title_upcoming"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_digi_kit"
        android:title="@string/nav_title_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_inbox"
        android:title="@string/nav_title_inbox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_more_settings"
        android:enabled="true"
        android:icon="@drawable/ic_more_menu"
        android:title="@string/nav_title_more"
        app:showAsAction="ifRoom" />
</menu>