<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/translucent_gradient_grey_shape_landing_bg"
    android:id="@+id/main_instructions_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".ui.TakeATourActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="50"
        android:layout_height="0dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/bg_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/your_happiness_expert_tv"
            android:layout_centerHorizontal="true"
            android:scaleType="center"
            android:visibility="invisible"
            android:src="@mipmap/logo_splash"
            android:layout_marginBottom="17dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/hapis_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="H A P I S"
            android:textAllCaps="false"
            android:textColor="#900C3F"
            style="@style/bold_20sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/your_happiness_expert_tv"
            android:layout_below="@+id/hapis_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_connected"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textColor="@color/white"
            style="@style/regular_16sp"/>


        <View
            android:layout_above="@+id/bottom"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="51.7dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="1"
            android:background="@color/transparent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@null"
                android:textAllCaps="true"
                android:text="@string/sign_up_label"
                android:textColor="@color/white"
                style="@style/regular_14sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="@null"
                android:textAllCaps="true"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                style="@style/regular_14sp"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
